[package]
name = "rustok-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[[bin]]
name = "migrate_legacy_richtext"
path = "src/bin/migrate_legacy_richtext.rs"
required-features = ["mod-content"]

[features]
default = [
    "redis-cache",
    "embed-admin",
    "embed-storefront",
    "mod-product",
    "mod-profiles",
    "mod-region",
    "mod-pricing",
    "mod-inventory",
    "mod-cart",
    "mod-customer",
    "mod-order",
    "mod-payment",
    "mod-fulfillment",
    "mod-commerce",
    "mod-content",
    "mod-blog",
    "mod-forum",
    "mod-notifications",
    "mod-comments",
    "mod-pages",
    "mod-page_builder",
    "mod-taxonomy",
    "mod-alloy",
    "mod-flex",
    "mod-media",
    "mod-seo",
    "mod-workflow",
    "mod-ai",
]
redis-cache = []
embed-admin = ["dep:rustok-admin", "embed-admin-assets"]
embed-admin-assets = ["dep:rust-embed"]
embed-storefront = ["dep:rustok-storefront"]
# Domain module feature flags — compile the module into the binary;
# resolvers additionally check is_enabled(tenant_id) at runtime.
mod-cart      = ["dep:rustok-cart", "rustok-distribution/mod-cart"]
mod-customer  = ["dep:rustok-customer", "rustok-distribution/mod-customer"]
mod-product   = ["dep:rustok-product", "mod-taxonomy", "rustok-distribution/mod-product"]
mod-profiles  = ["dep:rustok-profiles", "mod-taxonomy", "rustok-distribution/mod-profiles"]
mod-region    = ["dep:rustok-region", "rustok-distribution/mod-region"]
mod-pricing   = ["dep:rustok-pricing", "mod-product", "rustok-distribution/mod-pricing"]
mod-inventory = ["dep:rustok-inventory", "mod-product", "rustok-distribution/mod-inventory"]
mod-order     = ["dep:rustok-order", "rustok-distribution/mod-order"]
mod-payment   = ["dep:rustok-payment", "rustok-payment/server", "rustok-distribution/mod-payment"]
payment-stripe = ["mod-payment", "rustok-payment/stripe", "dep:rustok-secrets"]
mod-fulfillment = ["dep:rustok-fulfillment", "rustok-distribution/mod-fulfillment"]
mod-commerce  = ["dep:rustok-commerce", "mod-cart", "mod-customer", "mod-product", "mod-region", "mod-pricing", "mod-inventory", "mod-order", "mod-payment", "mod-fulfillment", "rustok-distribution/mod-commerce"]
mod-marketplace_seller = ["dep:rustok-marketplace-seller", "rustok-marketplace-seller/graphql", "rustok-distribution/mod-marketplace_seller"]
mod-marketplace_listing = ["dep:rustok-marketplace-listing", "mod-marketplace_seller", "mod-product", "rustok-distribution/mod-marketplace_listing"]
mod-marketplace_allocation = ["dep:rustok-marketplace-allocation", "mod-order", "mod-marketplace_seller", "mod-marketplace_listing", "rustok-distribution/mod-marketplace_allocation"]
mod-marketplace_commission = ["dep:rustok-marketplace-commission", "mod-marketplace_allocation", "rustok-distribution/mod-marketplace_commission"]
mod-marketplace_ledger = ["dep:rustok-marketplace-ledger", "mod-marketplace_commission", "rustok-distribution/mod-marketplace_ledger"]
mod-marketplace_payout = ["dep:rustok-marketplace-payout", "mod-marketplace_ledger", "rustok-distribution/mod-marketplace_payout"]
mod-marketplace = ["dep:rustok-marketplace", "mod-marketplace_seller", "mod-marketplace_listing", "mod-marketplace_allocation", "mod-marketplace_commission", "mod-marketplace_ledger", "mod-marketplace_payout", "rustok-distribution/mod-marketplace"]
mod-moderation = ["dep:rustok-moderation", "rustok-distribution/mod-moderation"]
mod-content   = ["dep:rustok-content", "rustok-content/graphql", "rustok-content-orchestration/mod-content", "rustok-distribution/mod-content"]
mod-blog      = ["dep:rustok-blog", "dep:rustok-content", "mod-comments", "mod-content", "mod-taxonomy", "rustok-content-orchestration/mod-blog", "rustok-distribution/mod-blog"]
mod-forum     = ["dep:rustok-forum", "mod-content", "mod-taxonomy", "mod-page_builder", "rustok-content-orchestration/mod-forum", "rustok-distribution/mod-forum"]
mod-notifications = ["dep:rustok-notifications", "rustok-distribution/mod-notifications"]
mod-comments  = ["dep:rustok-comments", "rustok-comments/server", "rustok-content-orchestration/mod-comments", "rustok-distribution/mod-comments"]
mod-pages     = ["dep:rustok-pages", "mod-content", "mod-page_builder", "rustok-distribution/mod-pages"]
mod-page_builder = ["dep:rustok-page-builder", "rustok-distribution/mod-page_builder"]
mod-taxonomy  = ["dep:rustok-taxonomy", "mod-content", "rustok-distribution/mod-taxonomy"]
mod-alloy     = ["dep:alloy", "rustok-distribution/mod-alloy"]
mod-flex      = ["rustok-distribution/mod-flex"]
mod-media     = ["dep:rustok-media", "rustok-distribution/mod-media"]
mod-seo       = ["dep:rustok-seo", "mod-content", "rustok-distribution/mod-seo"]
mod-workflow  = ["dep:rustok-workflow", "rustok-distribution/mod-workflow"]
mod-ai        = []

[dependencies]
rustok-core = { workspace = true, features = ["redis-cache", "server"] }
rustok-modules.workspace = true
rustok-sandbox = { workspace = true, features = ["rhai", "wasm-component"] }
rustok-distribution = { workspace = true, default-features = false }
rustok-api = { workspace = true, features = ["server"] }
rustok-build.workspace = true
rustok-auth = { workspace = true, features = ["graphql"] }
rustok-cache = { workspace = true, features = ["redis-cache"] }
rustok-channel.workspace = true
rustok-email.workspace = true
rustok-events.workspace = true
rustok-web.workspace = true
flex.workspace = true
rustok-admin = { path = "../admin", default-features = false, features = ["ssr"], optional = true }
rustok-storefront = { path = "../storefront", default-features = false, features = ["ssr"], optional = true }
rustok-cart      = { workspace = true, optional = true }
rustok-customer  = { workspace = true, optional = true }
rustok-product   = { workspace = true, optional = true }
rustok-profiles  = { workspace = true, optional = true }
rustok-region    = { workspace = true, optional = true }
rustok-pricing   = { workspace = true, optional = true }
rustok-inventory = { workspace = true, optional = true }
rustok-order     = { workspace = true, optional = true }
rustok-payment   = { workspace = true, optional = true }
rustok-secrets   = { workspace = true, optional = true }
rustok-fulfillment = { workspace = true, optional = true }
rustok-commerce  = { workspace = true, optional = true }
rustok-marketplace-seller = { workspace = true, optional = true }
rustok-marketplace-listing = { workspace = true, optional = true }
rustok-marketplace-allocation = { workspace = true, optional = true }
rustok-marketplace-commission = { workspace = true, optional = true }
rustok-marketplace-ledger = { workspace = true, optional = true }
rustok-marketplace-payout = { workspace = true, optional = true }
rustok-marketplace = { workspace = true, optional = true }
rustok-moderation = { workspace = true, optional = true }
rustok-blog      = { workspace = true, optional = true }
rustok-comments  = { workspace = true, optional = true }
rustok-content   = { workspace = true, optional = true }
rustok-content-orchestration = { workspace = true }
rustok-forum     = { workspace = true, optional = true }
rustok-notifications = { workspace = true, optional = true }
rustok-pages     = { workspace = true, optional = true }
rustok-page-builder = { workspace = true, optional = true }
rustok-taxonomy  = { workspace = true, optional = true }
rustok-storage   = { workspace = true, features = ["s3"] }
rustok-media     = { workspace = true, optional = true }
rustok-seo       = { workspace = true, optional = true }
rustok-index.workspace = true
rustok-search = { workspace = true, features = ["graphql"] }
rustok-tenant.workspace = true
rustok-rbac = { workspace = true, features = ["graphql"] }
rustok-mcp = { workspace = true, features = ["graphql"] }
rustok-ai = { workspace = true, features = ["graphql"] }
rustok-runtime.workspace = true
rustok-telemetry.workspace = true
rustok-iggy.workspace = true
rustok-outbox.workspace = true
rustok-installer = { path = "../../crates/rustok-installer" }
rustok-installer-persistence.workspace = true
alloy            = { workspace = true, optional = true }
rustok-workflow  = { workspace = true, optional = true }

tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
axum.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
axum-extra = { version = "0.12", features = ["typed-header"] }
sea-orm.workspace = true
async-graphql = { workspace = true, features = ["dataloader"] }
async-graphql-value.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tera.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
base64.workspace = true
eyre = "0.6"
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
password-hash.workspace = true
rhai = { workspace = true, features = ["sync", "metadata"] }
sha2.workspace = true
moka = { workspace = true, features = ["future"] }
once_cell.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "yaml"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
rust-embed = { version = "8.0", features = ["interpolate-folder-path"], optional = true }
tower-http = { workspace = true, features = ["fs"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
semver = "1.0"
rand.workspace = true
subtle = "2"
bytes = "1.0"
ipnet = "2.12"
url = "2.5"

# Server migration and schema composition
rustok-migrations = { path = "../../crates/rustok-migrations" }
sea-orm-migration.workspace = true

[dev-dependencies]
serial_test = "3.5"
rustok-test-utils.workspace = true
tempfile = "3.27"
tower.workspace = true
url = "2.5"

[build-dependencies]
serde.workspace = true
toml.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["serial_test"]
normal = ["rustok-rbac", "rustok-tenant", "password-hash"]
