[package]
name = "fly-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSR-first JavaScript browser adapter assets and protocol contracts for Fly editors"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
