[package]
name = "fly-leptos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leptos and browser adapter foundation for Fly visual editors"

[lib]
path = "src/root.rs"

[dependencies]
fly = { path = "../fly" }
fly-ui = { path = "../fly-ui" }
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "DomRectReadOnly",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlIFrameElement",
  "KeyboardEvent",
  "MessageEvent",
  "PointerEvent",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Window",
] }
