[package]
name = "fly-leptos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SSR-first Leptos adapter foundation for Fly visual editors"

[lib]
path = "src/root.rs"

[features]
default = ["ssr"]
ssr = ["leptos/ssr"]
wasm-client = [
  "leptos/hydrate",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:web-sys",
]

[dependencies]
fly = { path = "../fly" }
fly-ui = { path = "../fly-ui" }
leptos.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Document",
  "DomRectReadOnly",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlIFrameElement",
  "KeyboardEvent",
  "MessageEvent",
  "PointerEvent",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Window",
] }
