[package]
name = "fly-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framework-neutral visual editor state, intents, policies, and contribution contracts"

[dependencies]
fly = { path = "../fly" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
