[package]
name = "fly"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framework-neutral visual editor engine and lossless GrapesJS compatibility core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
