[package]
name = "leptos-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
default = []
csr = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:reqwest",
]

[dependencies]
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_router = { workspace = true }
rustok-graphql.workspace = true
rustok-ui-transport.workspace = true
leptos-use = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"], optional = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Location"] }
js-sys = { version = "0.3" }

[package.metadata.cargo-udeps.ignore]
normal = ["leptos_axum"]
