[package]
name = "leptos-ui-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared Leptos URL/query routing helpers for host-owned and module-owned UI"

[lib]
crate-type = ["rlib"]

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
rustok-api = { workspace = true, default-features = false }
serde_urlencoded.workspace = true
