[package]
name = "rustok-ai-product"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain-owned AI verticals for product flows"

[features]
default = []
server = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid.workspace = true
