[package]
name = "rustok-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI orchestration capability for RusToK"

[features]
default = []
server = [
  "dep:alloy",
  "dep:loco-rs",
  "dep:once_cell",
  "dep:rustok-core",
  "dep:rustok-mcp",
  "dep:schemars",
  "dep:sea-orm",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
alloy = { workspace = true, optional = true }
base64.workspace = true
loco-rs = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"] }
rustok-core = { workspace = true, optional = true }
rustok-mcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
