[package]
name = "rustok-build-publication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared credential and signing boundary for RusToK build publication"

[dependencies]
async-trait.workspace = true
base64.workspace = true
hex.workspace = true
oci-distribution.workspace = true
rustok-modules.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
