[package]
name = "rustok-build-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Digest-addressed source archive materialization for RusToK build workers"

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
