[package]
name = "rustok-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform build and release persistence contracts for RusToK"

[dependencies]
chrono.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
