[package]
name = "rustok-cli-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-level command provider for the RusToK CLI"

[dependencies]
async-trait.workspace = true
rustok-cli-core.workspace = true
rustok-runtime.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
