[package]
name = "rustok-cli-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform-level command provider for the RusToK CLI"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-api.workspace = true
rustok-cli-core.workspace = true
rustok-runtime.workspace = true
rustok-build.workspace = true
rustok-tenant.workspace = true
migration = { path = "../../apps/server/migration" }
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
