[package]
name = "rustok-cli-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Selected distribution command provider registry for the RusToK platform CLI"

[dependencies]
async-trait.workspace = true
rustok-cli-core.workspace = true
rustok-cli-platform.workspace = true
rustok-auth-cli.workspace = true
rustok-media-cli.workspace = true
rustok-profiles-cli.workspace = true
rustok-rbac-cli.workspace = true
rustok-installer-cli.workspace = true
rustok-runtime.workspace = true
serde_json.workspace = true
