[package]
name = "rustok-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "User-facing RusToK platform CLI runner"

[dependencies]
async-trait.workspace = true
rustok-cli-core.workspace = true
rustok-cli-registry.workspace = true
rustok-runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
name = "rustok_cli"
path = "src/lib.rs"

[[bin]]
name = "rustok-cli"
path = "src/main.rs"
