[package]
name = "rustok-comments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic comments domain for blog and other opt-in non-forum discussion surfaces"

[features]
default = ["server"]
server = [
  "dep:async-trait",
  "dep:chrono",
  "dep:rustok-content",
  "dep:rustok-core",
  "dep:rustok-telemetry",
  "dep:sea-orm",
  "dep:sea-orm-migration",
  "dep:thiserror",
  "dep:tracing",
]

[dependencies]
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rustok-content = { workspace = true, optional = true }
rustok-core = { workspace = true, optional = true }
rustok-telemetry = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
