[package]
name = "rustok-commerce"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-commerce-foundation.workspace = true
rustok-cart.workspace = true
rustok-customer.workspace = true
rustok-product.workspace = true
rustok-region.workspace = true
rustok-pricing.workspace = true
rustok-inventory.workspace = true
rustok-order.workspace = true
rustok-payment.workspace = true
rustok-fulfillment.workspace = true
rustok-marketplace-allocation = { path = "../rustok-marketplace-allocation" }
rustok-marketplace-commission = { path = "../rustok-marketplace-commission" }
rustok-marketplace-ledger = { path = "../rustok-marketplace-ledger" }
flex.workspace = true
async-trait.workspace = true
axum.workspace = true
rust_decimal.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
chrono.workspace = true
rustok-web.workspace = true
rustok-api = { workspace = true, features = ["server"] }
rustok-channel.workspace = true
rustok-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio.workspace = true
rustok-test-utils.workspace = true
rustok-tenant.workspace = true
tower.workspace = true
proptest = "1.11"
rust_decimal_macros = "1.36"
rustok-taxonomy.workspace = true
